--- a/src/CSS/NotFound.css
+++ b/src/CSS/NotFound.css
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 #fakebody {
-  height: 100vh;
-  width: 100vw;
+  overflow: hidden !important;
 }
 
 #container404 {
   font-family: "Poppins", sans-serif;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 58px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,8 +80,8 @@
 #container404 .content404 a::after {
   content: "";
   height: 2px;
-  width: 162.578px;
-  left: -162.578px;
+  width: 144px;
+  left: -144px;
   background-color: #fff;
   position: absolute;
   bottom: -2px;
@@ -99,7 +98,7 @@
 @-webkit-keyframes RtL {
   from {
     opacity: 0;
-    left: -162.578px;
+    left: -144px;
   }
   to {
     opacity: 1;
@@ -110,7 +109,7 @@
 @keyframes RtL {
   from {
     opacity: 0;
-    left: -162.578px;
+    left: -144px;
   }
   to {
     opacity: 1;
