--- a/src/CSS/Index.css
+++ b/src/CSS/Index.css
@@ -1,4 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap");
+@-webkit-keyframes arrowRtoL {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 0;
+  }
+}
+@keyframes arrowRtoL {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 0;
+  }
+}
+
+@-webkit-keyframes arrowLtoR {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 100%;
+  }
+}
+
+@keyframes arrowLtoR {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 100%;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -45,9 +80,33 @@ a {
 }
 
 #Header .nav .nav-item .nav-link.active {
+  position: relative;
   background: transparent;
   color: rgba(255, 255, 255, 0.85) !important;
   border: 1px solid #301c4d;
+}
+
+#Header .nav .nav-item .nav-link.active::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: calc(50% - 10px);
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid rgba(255, 255, 255, 0.85) !important;
+}
+
+#Header .nav .nav-item #NL1.active::after {
+  -webkit-animation: arrowRtoL 0.5s cubic-bezier(0.31, 0.13, 0.49, 1.37) 0s 1;
+          animation: arrowRtoL 0.5s cubic-bezier(0.31, 0.13, 0.49, 1.37) 0s 1;
+}
+
+#Header .nav .nav-item #NL2.active::after {
+  bottom: -9px;
+  -webkit-animation: arrowLtoR 0.5s cubic-bezier(0.31, 0.13, 0.49, 1.37) 0s 1;
+          animation: arrowLtoR 0.5s cubic-bezier(0.31, 0.13, 0.49, 1.37) 0s 1;
 }
 
 #Header .nav #User {
