--- a/src/CSS/Index.css
+++ b/src/CSS/Index.css
@@ -107,7 +107,7 @@ a {
   display: flex;
   position: relative;
   height: calc(100vh - 58px);
-  color: #757575;
+  color: rgba(117, 117, 117, 0.712);
 }
 
 #Music #Menu {
@@ -118,18 +118,64 @@ a {
           user-select: none;
 }
 
-#Music #Menu #PlaylistContainer {
+#Music #Menu .bloc {
   position: relative;
-  overflow: auto;
-}
-
-#Music #Menu #PlaylistContainer .Playlist {
   width: 100%;
   height: 30px;
   margin-bottom: 20px;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+#Music #Menu #PlaylistContainer {
+  position: relative;
+  padding-top: 10px;
+}
+
+#Music #Menu #PlaylistContainer .Playlist.active {
+  color: rgba(17, 17, 17, 0.815);
+  font-weight: bold;
+}
+
+#Music #Menu #PlaylistContainer .Playlist.active::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  height: 100%;
+  border: 2px solid #301c4d;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+#Music #Menu #PlaylistContainer .Playlist.active::after {
+  content: "";
+  position: absolute;
+  left: 8%;
+  top: 4px;
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-left: 7px solid rgba(117, 117, 117, 0.712);
 }
 
 #Music #Menu #settings {
   position: relative;
+  padding-top: 10px;
+}
+
+#Music #Menu #settings span {
+  font-size: 20px;
+}
+
+#Music #Menu #settings .settings {
+  position: absolute;
+  bottom: 0;
+}
+
+#Music #Menu #settings .NewPlaylist:active,
+#Music #Menu #settings .settings:active {
+  color: rgba(17, 17, 17, 0.815);
 }
 /*# sourceMappingURL=Index.css.map */
