--- a/src/CSS/Index.css
+++ b/src/CSS/Index.css
@@ -22,6 +22,11 @@ a {
   color: rgba(255, 255, 255, 0.85) !important;
 }
 
+.BouttonPerso {
+  color: rgba(255, 255, 255, 0.85) !important;
+  background-color: #301c4d !important;
+}
+
 .resize {
   position: absolute;
   background-color: rgba(173, 173, 173, 0.7);
@@ -181,6 +186,61 @@ a {
 #Music #Menu #settings .NewPlaylist:active,
 #Music #Menu #settings .settings:active {
   color: rgba(17, 17, 17, 0.815);
+}
+
+#Music #PlaylistWithMusic {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#Music #PlaylistWithMusic header {
+  position: absolute;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  border-bottom: 1px solid rgba(173, 173, 173, 0.7);
+  padding: 20px;
+}
+
+#Music #PlaylistWithMusic header .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#Music #PlaylistWithMusic header .info h2 {
+  font-weight: bold;
+}
+
+#Music #PlaylistWithMusic header .info img {
+  border: 1px solid rgba(173, 173, 173, 0.7);
+  border-radius: 10px;
+  width: 200px;
+  margin-top: 0;
+}
+
+#Music #PlaylistWithMusic header .info .inlineWritten ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: inside;
+}
+
+#Music #PlaylistWithMusic header .action {
+  position: absolute;
+  right: 20px;
+}
+
+#Music #PlaylistWithMusic header .action .BouttonPerso span:hover {
+  color: rgba(255, 255, 255, 0.85) !important;
 }
 
 #Music #PlaylistWithMusic.Spinner,
