Save + begin YTDownloader

--- a/src/CSS/Index.css
+++ b/src/CSS/Index.css
@@ -277,4 +277,8 @@ a {
 #Music #PlaylistWithMusic.non-selection span:hover {
   color: rgba(17, 17, 17, 0.815);
 }
+
+#YTLD {
+  text-align: center;
+}
 /*# sourceMappingURL=Index.css.map */
