--- a/src/CSS/Index.css
+++ b/src/CSS/Index.css
@@ -238,8 +238,6 @@ a {
 }
 
 #Music #PlaylistWithMusic header {
-  position: absolute;
-  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -261,7 +259,8 @@ a {
 #Music #PlaylistWithMusic header .info img {
   border: 1px solid rgba(173, 173, 173, 0.7);
   border-radius: 10px;
-  width: 200px;
+  width: 150px;
+  height: 150px;
   margin-top: 0;
 }
 
@@ -279,6 +278,94 @@ a {
 
 #Music #PlaylistWithMusic header .action .BouttonPerso span:hover {
   color: rgba(255, 255, 255, 0.85) !important;
+}
+
+#Music #PlaylistWithMusic #containerMusicList {
+  overflow: auto;
+  min-height: calc(100% - 191px);
+  max-height: 100%;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 55px;
+  border-bottom: 1px solid rgba(173, 173, 173, 0.7);
+  margin-bottom: 5px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song img {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  margin-left: 5px;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song .PlayMusic {
+  opacity: 0;
+  width: 35px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: calc(50% - 35px / 2);
+  left: calc(25px - 25px / 2);
+  color: #301c4d;
+  border-radius: 50%;
+  padding: 5px;
+  background-color: #fff;
+  cursor: pointer;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song h3 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song h4 {
+  position: absolute;
+  bottom: -8px;
+  font-size: 20px;
+  left: 80px;
+  text-decoration: underline;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song #ActionMusic {
+  opacity: 0;
+  top: calc(50% - 38px / 2);
+  position: absolute;
+  right: 20px;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song:hover,
+#Music #PlaylistWithMusic #containerMusicList .Song:focus {
+  background-color: rgba(48, 28, 77, 0.06);
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song:hover .PlayMusic,
+#Music #PlaylistWithMusic #containerMusicList .Song:focus .PlayMusic {
+  opacity: 1;
+}
+
+#Music #PlaylistWithMusic #containerMusicList .Song:hover #ActionMusic,
+#Music #PlaylistWithMusic #containerMusicList .Song:focus #ActionMusic {
+  opacity: 1;
 }
 
 #Music #PlaylistWithMusic.Spinner,
